:icons: font

////
* Write changelog entries in present tense
* Include GitHub issue or PR if possible using link:http://...[#123] format
* Review your changelog entries
* Don't include security sensitive information in the changelog
* Include links to documentation if possible
////

= Gentics Mesh Changelog


[[v0.22.0]]
== 0.22.0 (TBD)

CAUTION: The concept of releases has been renamed into branches. 

* The `release` query parameter is now called `branch`

[[v0.21.2]]
== 0.21.2 (TBD)

icon:plus[] Elasticsearch: The base64 encoded binary document data will no longer be stored in the search index.

icon:check[] GraphQl: Fixed a bug that caused an error when multiple queries where executed concurrently.

icon:check[] Core: Increased performance for webroot endpoint

[[v0.21.1]]
== 0.21.1 (28.05.2018)

icon:plus[] Elasticsearch: It is now possible to configure https://www.elastic.co/guide/en/elasticsearch/reference/current/mapping.html[custom mappings] for binary fields. Currently only the `mimeType` and `file.content` fields can be mapped. An example for this mapping can be found in the https://getmesh.io/docs/beta/elasticsearch.html#_binary_fields[Gentics Mesh search documentation].

[[v0.21.0]]
== 0.21.0 (27.05.2018)

icon:bullhorn[] Binary Search

[quote]
____
This version of Gentics Mesh introduces the __Binary Search support__.

The https://www.elastic.co/guide/en/elasticsearch/plugins/6.2/ingest-attachment.html[Elasticsearch Ingest Attachment Plugin] will be utilized if possible to process text file uploads (PDF, DOC, DOCX).
A detailed description of this feature can be found in our https://getmesh.io/docs/beta/elasticsearch.html#_binarysearch[Elasticsearch Documentation].
____
