@@ -14,9 +14,13 @@
 [[v0.22.0]]
 == 0.22.0 (TBD)
 
-CAUTION: The concept of releases has been renamed into branches. 
+CAUTION: The concept of releases has been renamed into branches. The database structure will automatically be updated.
 
-* The `release` query parameter is now called `branch`
+* The `releases` endpoint was renamed to `branches`.
+* The `release` query parameter is now called `branch`.
+* The `mesh.release.created`, `mesh.release.updated`, `mesh.release.deleted` have been changed to `mesh.branch.created`, `mesh.branch.updated`, `mesh.branch.deleted`.
+* The Java REST Models have been renamed. (e.g.: ReleaseCreateRequest -> BranchCreateRequest)
+* I18n messages have been changed accordingly.
 
 [[v0.21.2]]
 == 0.21.2 (TBD)
